# from-paper-to-runtime

./: .gitignore  README.md
GPU_커널_런타임/: Dockerfile  compile_trt.py  model.py  runtime.py  setup.py
GPU_커널_런타임/csrc/: ops.cpp
GPU_커널_런타임/docs/: GPU_AlexNet_Optimization_Report.md
GPU_커널_런타임/tests/: bench_phase2.py  bench_phase3.py  test_phase3.py
GPU_커널_런타임/tools/: dump_sass.sh  sass_report_example.md
NPU_커널_런타임/: intel_npu_defs.hpp  intel_npu_pipeline.cpp  intel_npu_scheduler.hpp
NPU_커널_런타임/docs/: NPU_HW_Contract.md
NPU_커널_런타임/raw/: alexnet_npu.cpp
NPU_커널_런타임/tests/: intel_npu_test_p1.cpp  intel_npu_test_p3.cpp
docs/: runtime-methodology.md  study-roadmap.md
studies/alexnet/: README.md
studies/alexnet/gpu_runtime/: README.md  plugin_stub.py  runtime.py
studies/alexnet/gpu_runtime/csrc/: kernel.cu
studies/alexnet/gpu_runtime/docs/: Runtime_Batching_Strategy.md
studies/alexnet/gpu_runtime/tests/: test_phase1.py
studies/alexnet/npu_runtime/: CMakeLists.txt  Dockerfile  README.md  alexnet_npu_runtime_demo.cpp  intel_npu_defs.hpp  intel_npu_pipeline.cpp  intel_npu_pipeline.hpp  intel_npu_scheduler.cpp  intel_npu_scheduler.hpp  intel_npu_simulator.cpp
studies/alexnet/npu_runtime/docs/: Compiler_Runtime_Architecture.md  Optimization_Performance.md  Tiling_and_Sync.md
studies/alexnet/npu_runtime/ir/: npu_ir.cpp  npu_ir.hpp
studies/alexnet/npu_runtime/passes/: canonicalize_pass.cpp  decompose_unsupported_pass.cpp  emit_descriptors_pass.cpp  fuse_activation_pass.cpp  memory_planning_pass.cpp  strip_dropout_pass.cpp
studies/alexnet/npu_runtime/runtime/: descriptor_serializer.cpp  descriptor_types.hpp
studies/alexnet/npu_runtime/tests/: intel_npu_test_descriptors.cpp  intel_npu_test_p2.cpp  intel_npu_test_p3.cpp  intel_npu_test_passes.cpp
studies/alexnet/pytorch/: alexnet.py  notes.md
studies/resnet/벤치마킹/압축/기본/: trt_profile_cuda_api_sum.csv  trt_profile_cuda_gpu_kern_sum.csv
studies/resnet/벤치마킹/적응/: fx_ptq_qat_resnet_block_observe.py
studies/resnet/벤치마킹/정렬/: residual_merge_calibration_probe.py  result.json
논문_개념/Alexnet/: alexnet.md
(+2 files in other folders)
